package user

type User struct {
	Id       int
	FullName string
	Email    string
	Password string
}
